--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -3,7 +3,7 @@
         <img src="/assets/img/avatar.JPG" alt="My Avatar" class="img-circle">
     </div>
     <section class="author">
-        <h4><a href="/about.html">liungkejing</a></h4>
-        <a href="mailto:liungkejin@gmail.com">liungkejin@gmail.com</a>
+        <h4><a href="/about.html">junboychina</a></h4>
+        <a href="mailto:jl7333@nyu.edu">jl7333@nyu.edu</a>
     </section>
 </footer>
