--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -108,7 +108,8 @@ nav.menu li:last-child {
     width: 90%;
     margin: 20px auto;
     font-family: "Roboto Slab", "Merriweather", "Open Sans", "Helvetica Neue", Helvetica, Arial, "Nimbus L", sans-serif;
-    font-size: 60px;
+    font-size: 16px;
+    font-weight: 600;
     line-height: 1.8em;
 }
 
